Refactor: 패키지 이름 변경, 회원가입, 수정 단위 테스트 작성[#3]